--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -835,7 +835,6 @@
                         </div>
                     </p-tabPanel>
                     <p-tabPanel header="Document Info">
-
                         <form action="" [formGroup]="dealerdocumentForm">
                             <div class="col-12">
                                 <div class="p-fluid p-formgrid grid">
@@ -896,7 +895,7 @@
                             <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                         </div>
 
-                        <div [hidden]="gridDisplayLocation">
+                        <div [hidden]="gridDisplayDocument">
                             <p-table [value]="dealerdocumentinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" selectionMode="single"
                                      [(selection)]="selecteddealerdocumentinfo" dataKey="DealerDocumentInfoId" (onRowSelect)="onRowSelectDocument($event)" (onRowUnselect)="onRowUnselectDocument($event)">
                                 <ng-template pTemplate="header">
@@ -925,7 +924,96 @@
                             <!--end grid display -------------->
                         </div>
                     </p-tabPanel>
-                    
+                    <p-tabPanel header="Credit Info">
+                        <form action="" [formGroup]="dealercreditForm">
+                            <!--<div class="col-12">
+                                <div class="p-fluid p-formgrid grid">
+                                    <div class="field col-12 md:col-3">
+                                        <label pTooltip="Document Type" tooltipPosition="top">Document Type</label>
+                                        <p-dropdown [options]="allDocument" formControlName="document_type_id" [ngClass]="{ 'is-invalid': submittedDocument && d.document_type_id.errors }" placeholder="---Select---"
+                                                    optionLabel="document_type_name" optionValue="document_type_id" [showClear]="true" [filter]="true" filterBy="document_type_name"></p-dropdown>
+
+                                        <div *ngIf="submittedDocument && d.document_type_id.errors" class="invalid-feedback">
+                                            <small *ngIf="d.document_type_id.errors.required" class="p-error">Document Type is required</small>
+                                        </div>
+
+                                    </div>
+                                    <div class="field col-12 md:col-3">
+                                        <label pTooltip="Document Number" tooltipPosition="top">Document Number</label>
+                                        <input type="text" formControlName="document_number" [ngClass]="{ 'is-invalid': submittedDocument && d.document_number.errors }" placeholder="" pInputText />
+                                        <div *ngIf="submittedDocument && d.document_number.errors" class="invalid-feedback">
+                                            <small *ngIf="d.document_number.errors.required" class="p-error">Document Number is required</small>
+                                        </div>
+                                    </div>
+                                    <div class="field col-12 md:col-3">
+                                        <label pTooltip="Issue Date" tooltipPosition="top">Issue Date</label>
+                                        <p-calendar formControlName="issue_date" [ngClass]="{ 'is-invalid': submittedDocument && d.issue_date.errors }" placeholder="" [showIcon]="true" [showButtonBar]="true"></p-calendar>
+                                        <div *ngIf="submittedDocument && d.issue_date.errors" class="invalid-feedback">
+                                            <small *ngIf="d.issue_date.errors.required" class="p-error">Issue date is required</small>
+                                        </div>
+                                    </div>
+                                    <div class="field col-12 md:col-3">
+                                        <label pTooltip="Expiry Date" tooltipPosition="top">Expiry Date</label>
+                                        <p-calendar formControlName="expiry_date" [ngClass]="{ 'is-invalid': submittedDocument && d.expiry_date.errors }" placeholder="" [showIcon]="true" [showButtonBar]="true"></p-calendar>
+                                        <div *ngIf="submittedDocument && d.expiry_date.errors" class="invalid-feedback">
+                                            <small *ngIf="d.expiry_date.errors.required" class="p-error">Expiry date is required</small>
+                                        </div>
+                                    </div>
+                                    <div class="field col-12 md:col-3">
+                                        <input type="file" class="from-control" formControlName="FileUpload" (change)="documnetFormFileInput($event.target.files)"
+                                               [ngClass]="{ 'is-invalid': submittedDocument && d.FileUpload.errors }"
+                                               placeholder="" pInputText required />
+                                        <div *ngIf="submittedDocument && d.FileUpload.errors" class="invalid-feedback">
+                                            <small *ngIf="d.FileUpload.errors.required" class="p-error">Attach File is required</small>
+                                        </div>
+                                    </div>
+                                    <div class="field col-12 md:col-1">
+                                        <button pButton pRipple type="button" (click)="SaveDealerDocumentInfo()" label="Add" class=" risBtn risAdd mr-2 mb-2" icon="pi pi-plus"></button>
+                                    </div>
+                                    <div class="field col-12 md:col-1">
+                                        <button pButton pRipple type="button" (click)="loadDealerDocumentinfoToEdit()" label="Edit" class="risBtn risEdit mr-2 mb-2" icon="pi pi-pencil"></button>
+                                    </div>
+                                    <div class="field col-12 md:col-1">
+                                        <button pButton pRipple type="button" (click)="deleteDocument($event)" label="Delete" class="risBtn risDelete mr-2 mb-2" icon="pi pi-trash"></button>
+                                        <p-confirmPopup key="delete"></p-confirmPopup>
+                                    </div>
+                                </div>
+                            </div>-->
+                        </form>
+                        <div class="flex justify-content-end pr-2">
+                            <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn  mr-2 mb-2" icon="pi pi-step-backward"></button>
+                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+                        </div>
+
+                        <div [hidden]="gridDisplayCredit">
+                            <p-table [value]="dealerdocumentinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" selectionMode="single"
+                                     [(selection)]="selecteddealerdocumentinfo" dataKey="DealerDocumentInfoId" (onRowSelect)="onRowSelectDocument($event)" (onRowUnselect)="onRowUnselectDocument($event)">
+                                <ng-template pTemplate="header">
+                                    <tr>
+                                        <th>Document Type</th>
+                                        <th>Document Number</th>
+                                        <th>Issue Date</th>
+                                        <th>Expiry Date</th>
+                                        <th>Uploaded File</th>
+                                    </tr>
+                                </ng-template>
+
+                                <ng-template pTemplate="body" let-dealerdocumentinfo let-rowDataDocument let-columns="columns">
+
+                                    <!--<tr [pSelectableRow]="dealerdocumentinfo">
+                                        <td hidden>{{dealerdocumentinfo.DealerInfoId}}</td>
+                                        <td hidden>{{dealerdocumentinfo.DealerDocumentInfoId}}</td>
+                                        <td>{{dealerdocumentinfo.DocumentTypeName}}</td>
+                                        <td>{{dealerdocumentinfo.DocumentNumber}}</td>
+                                        <td>{{dealerdocumentinfo.IssueDate | date: 'dd/MMM/yyyy'}}</td>
+                                        <td>{{dealerdocumentinfo.ExpiryDate | date: 'dd/MMM/yyyy'}}</td>
+                                        <td>{{dealerdocumentinfo.ImageFile}}</td>
+                                    </tr>-->
+                                </ng-template>
+                            </p-table>
+                            <!--end grid display -------------->
+                        </div>
+                    </p-tabPanel>
                 </p-tabView>
             </div>
             <!--end form display------------->
@@ -936,8 +1024,9 @@
                 <button pButton pRipple type="button" (click)="loadDealerinfoContactGrid()" label="Contact Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadDealerinfoLocationGrid()" label="Location Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadDealerinfoDocumentGrid()" label="Document Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadDealerinfoCreditGrid()" label="Credit Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <p-confirmPopup key="delete"></p-confirmPopup>
-                
+
                 <p-table [value]="dealerinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
                          [(selection)]="selecteddealerinfo" dataKey="DealerInfoId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
                     <ng-template pTemplate="header">
