--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -999,12 +999,13 @@
                                     <tr [pSelectableRow]="dealercreditinfo">
                                         <td hidden>{{dealercreditinfo.DealerInfoId}}</td>
                                         <td hidden>{{dealercreditinfo.DealerCreditInfoId}}</td>
-                                        <td>{{dealercreditinfo.SecurityDepositId}}</td>
-                                        <td>{{dealercreditinfo.SecurityType}}</td>
+                                        <td>{{dealercreditinfo.SecurityDepositName}}</td>
+                                        <td>{{dealercreditinfo.SecurityDepositType}}</td>
                                         <td>{{dealercreditinfo.Amount}}</td>
                                         <td>{{dealercreditinfo.ExpiryDate | date: 'dd/MMM/yyyy'}}</td>
                                         <td>{{dealercreditinfo.Remarks}}</td>
-                                        <td>{{dealercreditinfo.IsApproved}}</td>
+                                        <td *ngIf="dealercreditinfo.IsApproved===true">{{"Approved"}}</td>
+                                        <td *ngIf="dealercreditinfo.IsApproved===false">{{"Pending"}}</td>
                                     </tr>
                                 </ng-template>
                             </p-table>
