--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -917,7 +917,7 @@
                                         <td>{{dealerdocumentinfo.DocumentNumber}}</td>
                                         <td>{{dealerdocumentinfo.IssueDate | date: 'dd/MMM/yyyy'}}</td>
                                         <td>{{dealerdocumentinfo.ExpiryDate | date: 'dd/MMM/yyyy'}}</td>
-                                        <td>{{dealerdocumentinfo.ImageFile}}</td>
+                                        <td>{{dealerdocumentinfo.FileUpload}}</td>
                                     </tr>
                                 </ng-template>
                             </p-table>
@@ -959,9 +959,10 @@
                                         <input type="text" formControlName="remarks"  placeholder="" pInputText />
 
                                     </div>
-                                    <!--<div class="field col-12 md:col-3">
+                                    <div class="field col-12 md:col-3">
                                         <input type="file" class="from-control" formControlName="FileUpload" (change)="creditFormFileInput($event.target.files)" placeholder="" pInputText required />
-                                    </div>-->
+
+                                    </div>
                                     <div class="field col-12 md:col-1">
                                         <button pButton pRipple type="button" (click)="SaveDealerCreditInfo()" label="Add" class=" risBtn risAdd mr-2 mb-2" icon="pi pi-plus"></button>
                                     </div>
@@ -990,6 +991,7 @@
                                         <th>Amount</th>
                                         <th>Expiry Date</th>
                                         <th>Remarks</th>
+                                        <th>Attachment</th>
                                         <th>Status</th>
                                     </tr>
                                 </ng-template>
@@ -1004,6 +1006,7 @@
                                         <td>{{dealercreditinfo.Amount}}</td>
                                         <td>{{dealercreditinfo.ExpiryDate | date: 'dd/MMM/yyyy'}}</td>
                                         <td>{{dealercreditinfo.Remarks}}</td>
+                                        <td>{{dealercreditinfo.FileUpload}}</td>
                                         <td *ngIf="dealercreditinfo.IsApproved===true">{{"Approved"}}</td>
                                         <td *ngIf="dealercreditinfo.IsApproved===false">{{"Pending"}}</td>
                                     </tr>
